# pytemplate

./: .gitignore  IMPLEMENTATION_SUMMARY.py  LICENSE  README.md  README.md.example  TEST_FIXES_SUMMARY.md  TEST_IMPROVEMENTS_SUMMARY.md  create_nested_archive.py  pyproject.toml  quick_coverage.py  test_nested_archive.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.trae/: project_rules.md
dev/ui/: readme.md
doc/: readme.md
pyextractit/: __init__.py  __main__.py  extractor.py  models.py  utils.py
pyprojectname/: README.md  __main__.py
src/pytemplate/: __main__.py
tests/: ___init___.py  __init__.py  conftest.py  create_fixtures.py  run_tests.py  test_cli.py  test_cli_debug.py  test_extractor.py  test_extractor_edge_cases.py  test_final_coverage.py  test_main.py  test_models.py  test_nested_archive_extraction.py  test_quick.py  test_sanitize_debug.py  test_sanitize_debug2.py  test_suffix_debug.py  test_utils.py  test_validation.py
tests/assets/: ___init__.py
tests/fixtures/: foo.txt
