[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytemplate"
version = "0.1.2"
description = "app description"

readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "loguru>=0.7.3",
]

[project.scripts]
pytemplate = "pytemplate.__main__:app"

[project.urls]
Homepage = "https://github.com/fxyzbtc/pytemplate"
Repository = "https://github.com/fxyzbtc/pytemplate"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.uv.sources]
pytemplate = { path = "src/pytemplate", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/pytemplate"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "doc/",
    "README.md",
    "pyproject.toml",
]
